# falcoclaw

./: .dockerignore  .gitignore  .goreleaser.yml  CODEOWNERS  Dockerfile  Makefile  README.md  config.yaml  falcoclaw.yaml  falcosidekick.yaml  go.mod  main.go
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  falco-rules.yml  integration.yml  release.yml  security.yml  validate-and-tag.yml
actionners/agent/: actionners.go
actionners/linux/: actionners.go
actionners/openclaw/: actionners.go
cmd/: check.go  root.go  server.go
internal/config/: config.go
internal/models/: event.go
internal/rules/: rules.go
internal/server/: server.go
plugins/hermes/: README.md  go.mod  pyproject.toml
plugins/hermes/cmd/hermes-webhook/: main.go
plugins/hermes/src/falcoclaw_hermes/: __init__.py  client.py  plugin.py
plugins/hermes/tests/: test_plugin.py
plugins/openclaw/: README.md  openclaw.plugin.json  package.json  tsconfig.json
plugins/openclaw/src/: actions.ts  alerts.ts  api.ts  index.ts  investigate.ts
plugins/openclaw/tests/: plugin.test.ts
rules/: falcoclaw_agents.yaml  falcoclaw_base.yaml  falcoclaw_network.yaml  falcoclaw_openbrain.yaml  falcoclaw_tuning.yaml  responses.yaml
scripts/: install.sh
tests/integration/: config.yaml  rules.yaml
tests/integration/fixtures/: credential_theft.json  crypto_miner_event.json  shell_spawn_event.json  test_event.json
