[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "falcoclaw-hermes"
version = "0.2.0"
description = "Hermes plugin for FalcoClaw runtime security"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["falco", "falcoclaw", "security", "hermes", "runtime-security"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["httpx>=0.25.0", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21", "httpx>=0.25.0"]

[project.urls]
Homepage = "https://falcoclaw.ai"
Repository = "https://github.com/thnkbig/falcoclaw"
Documentation = "https://github.com/thnkbig/falcoclaw#hermes-plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
